examples/negative/type_invariants/call_arg_type.kai
# Negative fixture (#520 / type system): a fn call passes a
# `String` where the declared parameter is `Int`. Typer must
# reject with "type mismatch in function call".

fn add(x: Int, y: Int) : Int = x + y

fn main() : Int = add(1, "two")
